--- a/Css/main.css
+++ b/Css/main.css
@@ -50,7 +50,7 @@ body {
 .boxs .box {
     height: 222px;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-bottom: 25px;
     margin-right: 10px;
     padding: 20px;
@@ -112,5 +112,8 @@ body {
     }
     .box {
         width: 300px;
+    }
+    .two {
+        margin: 0 20px;
     }
 }
