--- a/Css/main.css
+++ b/Css/main.css
@@ -23,8 +23,7 @@ body {
 }
 
 .content {
-    padding: 25px;
-    margin: 25px 0;
+    padding:0 25px;
 }
 
 .address {
@@ -33,7 +32,7 @@ body {
 
 .address h1:first-child {
     font-weight: lighter;
-    font-size: 25px;
+    font-size: 22px;
 }
 
 .address .power {
@@ -42,8 +41,10 @@ body {
     color: hsl(234, 12%, 34%);
 }
 
-.address p {
-    padding-top: 20px;
+.address p:last-child {
+    padding: 20px 0;
+    max-width:450px;
+    margin:0 auto;
     color: hsl(229, 6%, 66%);
 }
 
@@ -52,11 +53,12 @@ body {
     background-color: white;
     border-radius: 5px;
     margin-bottom: 25px;
-    margin-right: 10px;
     padding: 20px;
     box-shadow: 0px 4px 5px -1px hsl(229, 6%, 66%);
 }
-
+@media (min-width:768px){
+    margin-right: 10px;
+}
 .boxs .box h3 {
     font-size: 25px;
     color: hsl(234, 12%, 34%);
@@ -84,27 +86,25 @@ body {
 }
 
 .boxs .box .image {
-    position: relative;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    bottom: 10px;
+    right: 20px;
 }
 
 .boxs .box .image img {
-    position: absolute;
-    top: 30px;
-    right: 0;
+    max-width:100%;
 }
 
 @media (min-width:375px) and (max-width:991px) {
     .address {
         text-align: center;
-        margin-bottom: 65px;
+        margin-bottom: 20px;
     }
 }
 
 @media (min-width:992px) {
-    .address p {
-        padding: 20px 290px;
-        margin-bottom: 35px;
-    }
     .boxs {
         display: flex;
         justify-content: center;
